add descriptions and licence

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,7 @@
 name = "ephemeral-dir"
 version = "0.0.1"
 edition = "2024"
+license = "MIT OR Apache-2.0"
+description = "A library for creating temporary directories that are auto-cleaned."
 
 [dependencies]
